Show all item okay

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recylerview"
         tools:listitem="@layout/item_layout_monan"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
